samples/bad/imports-package-path-missing/imports.mf
<imports>
  <package name="SamplePackage" />
</imports>
